fix: fix z-index

--- a/src/components/Card/card.module.css
+++ b/src/components/Card/card.module.css
@@ -68,7 +68,7 @@
   text-align: center;
   background-color: white;
   box-shadow: 0px 2px 8px 0px rgba(51, 50, 54, 0.1);
-  z-index: 99;
+  z-index: 60;
 }
 
 .option {
